# pokemonintelligence

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_partitioned.py  0002_mv_latest_scores_extras.py
apps/api/src/miami_api/: __init__.py  auth.py  main.py
apps/api/src/miami_api/routers/: alerts.py  analytics.py  catalog.py  history.py  rankings.py
apps/api/src/miami_api/scripts/: seed_catalog_dev.py  verify_formula_hashes.py
apps/api/src/miami_api/worker/: __init__.py  daily_pipeline.py
apps/api/tests/: conftest.py  test_build_features_pit_safe.py  test_confidence_cap.py  test_matching_precision_recall.py  test_no_forward_reads.py  test_replay_hash_stable.py
apps/api/tests/fixtures/: ebay_titles_labeled.jsonl
apps/web/: middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/_components/: Nav.tsx  RankingTable.tsx
apps/web/src/app/alerts/: page.tsx
apps/web/src/app/api/revalidate/: route.ts
apps/web/src/app/arbitrage/: page.tsx
apps/web/src/app/cards/[id]/: PriceChart.tsx  page.tsx
apps/web/src/lib/: api.ts
docs/: architecture.md  data_dictionary.md  formulas.md  runbook_collectors.md
scripts/: setup.sh
