[project]
name = "miami-root"
version = "0.1.0"
description = "Pokemon Market Intelligence Platform — monorepo root"
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/common",
    "packages/domain",
    "packages/collectors",
    "packages/matching",
    "packages/features",
    "packages/scoring",
]

[tool.uv.sources]
miami-common = { workspace = true }
miami-domain = { workspace = true }
miami-collectors = { workspace = true }
miami-matching = { workspace = true }
miami-features = { workspace = true }
miami-scoring = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", "apps/api/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# B008 flags `def f(x = Query(...))` — that's the REQUIRED FastAPI dependency pattern,
# so we ignore it globally.
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = [
    "miami_common",
    "miami_domain",
    "miami_collectors",
    "miami_matching",
    "miami_features",
    "miami_scoring",
    "miami_api",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["apps/api/tests", "packages/*/tests", "tests"]
filterwarnings = ["error", "ignore::DeprecationWarning:pydantic"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["apps/api/alembic/versions"]
