[project]
name = "miami-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "miami-common",
    "miami-domain",
    "miami-collectors",
    "miami-matching",
    "miami-features",
    "miami-scoring",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "alembic>=1.14",
    "slowapi>=0.1.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miami_api"]
